# Inlook-Email-Analysis

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
config/: GlobalConfig.json
config/workflows/: DummyWorkflow1.json
include/: ArgumentParser.hpp  AttributeBagValueInterface.hpp  Email.hpp  EmailBody.hpp  EmailListView.hpp  EmailStorage.hpp  GlobalConfigManager.hpp  Logger.hpp  OrderedStringToPluginInterfaceMap.hpp  PluginExecutorInterface.hpp  PluginInterface.hpp  PluginRegistry.hpp  PluginRunnableInterface.hpp  PluginStateManager.hpp  RootPluginExecutor.hpp  WebUIManager.hpp
plugins/: CMakeLists.txt  README.md  newNamedPlugin.py
plugins/AttributeBagLogger/: CMakeLists.txt  README.md
plugins/AttributeBagLogger/include/: AttributeBagLogger.hpp
plugins/AttributeBagLogger/src/: AttributeBagLogger.cpp
plugins/AttributeBagStringAdder/: CMakeLists.txt  README.md
plugins/AttributeBagStringAdder/include/: AttributeBagStringAdder.hpp
plugins/AttributeBagStringAdder/src/: AttributeBagStringAdder.cpp
plugins/DummyPlugin/: CMakeLists.txt
plugins/DummyPlugin/include/: DummyPlugin.hpp
plugins/DummyPlugin/src/: DummyPlugin.cpp
plugins/EmailListFilter/: CMakeLists.txt  README.md
plugins/EmailListFilter/include/: EmailListFilter.hpp
plugins/EmailListFilter/src/: EmailListFilter.cpp
plugins/EmailLoader/: CMakeLists.txt
plugins/EmailLoader/include/: EmailLoader.hpp  EmailLoaderAttributes.hpp  EmailParser_FSM.hpp
plugins/EmailLoader/src/: EmailLoader.cpp  EmailParser_FSM.cpp
plugins/ParallelPluginExecutor/: CMakeLists.txt
plugins/ParallelPluginExecutor/include/: ParallelPluginExecutor.hpp
plugins/ParallelPluginExecutor/src/: ParallelPluginExecutor.cpp
plugins/PostgresqlReader/: CMakeLists.txt  README.md
plugins/PostgresqlReader/include/: PostgresqlReader.hpp
plugins/PostgresqlReader/src/: PostgresqlReader.cpp
plugins/PostgresqlSaver/: CMakeLists.txt  README.md
plugins/PostgresqlSaver/include/: PostgresqlSaver.hpp
plugins/PostgresqlSaver/src/: PostgresqlSaver.cpp
plugins/SerialPluginExecutor/: CMakeLists.txt
plugins/SerialPluginExecutor/include/: SerialPluginExecutor.hpp
plugins/SerialPluginExecutor/src/: SerialPluginExecutor.cpp
src/: ArgumentParser.cpp  Email.cpp  EmailListView.cpp  EmailStorage.cpp  GlobalConfigManager.cpp  Logger.cpp  Main.cpp  PluginInterface.cpp  PluginRegistry.cpp  PluginStateManager.cpp  RootPluginExecutor.cpp  WebUIManager.cpp
testdata/: email1.eml  email2.eml  email3.eml  email4.eml  email5.eml  email6.eml  email7.eml
web/: index.html  index.html.old
web/js/: components.js  config.js  docs.js  emails.js  index.js  logs.js  plugins.js  readme.js
web/style/: style.css
web/tabs/: config.html  docs.html  emails.html  logs.html  plugins.html  readme.html
